Fix search dropdown spacing issue

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -268,6 +268,7 @@ footer .menu li a:hover {
 }
 #search-options select {
   display: inline-block;
+  float: left;
   margin: 0;
   width: calc(50% - 0.5rem);
 }
